CVS HEAD
  * Implemented a backend list with option to manually choose a backend
    to connect on startup(Edit/Preferences, then click the `Backend' tab)
    and option to change the backend without restarting JSampler
    (Actions/Change Backend or Ctrl + B)

  * Added confirmation messages for removing sampler channels and
    audio/MIDI devices (Edit/Preferences, then click the `View' tab)

  * Bug fixes:
    - fixed bug #66
    - fixed a null pointer exception in the AudioDevicePane, when JACK
      driver is used and the additional device parameters are shown.
    - fixed bug #76
    - fixed bug #77

JSampler v0.8a: 2007-12-06
  * Added new menu item: Help/Online Tutorial

  * Implemented support for retrieving instrument information
    from instrument files

  * Added support for monitoring the total number of active disk streams

  * Added Windows file path support

  * The volume values are now shown in decibels

  * Added confirmation dialog on exit

  * Fantasia:
    - Added option for turning off the custom window decoration
      (choose Edit/Preferences, then click the `View' tab)

  * Bug fixes:
    - The parameter changes were discarded when creating
      new audio/MIDI device
    - The orchestras changes were not saved for the next session
      when orchestras.xml does not exist in the JSampler's home directory
    - In some cases the sampler configuration was not exported
      properly to LSCP script
    - Fixed a bug in the parameter table occuring when combo box
      is used as cell editor
    - If there is a cell editing in progress in the parameter table,
      it is now finalized before creating new audio/MIDI device
    - Fantasia: Fixed the view of the channel's stream/voice count statistic
    - Some minor bugfixes and enhancements

JSampler v0.7a: 2007-10-15
  * Added options for choosing default actions when channel is
    created and assignment of default MIDI/audio drivers to be used